# ASAG_capstone

./: .dockerignore  .env.example  .gitignore  CHANGES.md  Dockerfile  Project_Report.md  README.md  grade_mapper.joblib  main.py  old_Review_content.md  physics_quiz.json  plan.md  poster.md  pyproject.toml  testing_data.csv  training_data.csv
frontend/: dashboard.html  index.html  login.html  style.css
frontend/student/: exam.html
frontend/teacher/: dashboard-questions.html  dashboard-student.html  dashboard.html  questions.html
models/: v1_fix1_fix5.joblib  v2_fix1_fix5_fix6.joblib  v3_embed.joblib
scripts/: compare_checkpoints.py  evaluate.py  generate_diagram.py  seed_demo.py  train_regressor.py
src/: embeddings.py  features.py  grade_mapper.py  key_builder.py  preprocessing.py  similarity.py  vectorizer.py
src/api/: app.py  auth.py  deps.py  models.py
src/api/routes/: grade.py  jobs.py  questions.py  submissions.py  users.py
src/store/: __init__.py  base.py  collections.py  schema.py
tests/unit/: test_grade_mapper.py  test_preprocessing.py  test_similarity.py  test_store.py  test_vectorizer.py
