[project]
name = "capstone-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.5",
    "nltk>=3.9",
    "scipy>=1.14",
    "numpy>=2.0",
    "joblib>=1.4",
    "pandas>=2.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "python-dotenv>=1.2.2",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
